--- a/Task20.html
+++ b/Task20.html
@@ -1,54 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overflow Property Example</title>
-  <style>
-    .box {
-      width: 210px;
-      height: 210px;
-      padding: 20px;
-      border: 2px solid black;
-      margin-bottom: 20px;
-      background-color: whitesmoke;
-      overflow: scroll;
-      whitespace 
-    }
-  </style>
+<style>
+div.ex1{
+background-color: aqua;
+width: 110px;
+height: 110px;
+overflow: scroll;
+margin-left: 50px;
+}
+div.ex2{
+background-color:red;
+width: 110px;
+height: 110px;
+overflow:hidden ;
+margin-left: 50px;
+}
+div.ex3{
+background-color:greenyellow;
+width: 110px;
+height: 110px;
+overflow:auto;
+margin-left: 50px;
+}
+div.ex4{
+background-color:greenyellow;
+width: 110px;
+height: 110px;
+overflow:clip;
+margin-left: 50px;
+}
+div.ex5{
+background-color:blueviolet;
+width: 110px;
+height: 110px;
+overflow:visible;
+margin-left: 50px;
+}
+</style>
 </head>
 <body>
+<h1>Overflow Property</h1>
+<p>The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+  The overflow property only works for block elements with a specified height.
+</p>
+<h2>overflow : scroll</h2>
+<div class="ex1">
+  The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+  The overflow property only works for block elements with a specified height.
+</div>
+<h2>overflow : hidden</h2>
+<div class="ex2">
+  The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+  The overflow property only works for block elements with a specified height.
+</div>
+<h2>overflow : auto</h2>
+<div class="ex3">
+  The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+  The overflow property only works for block elements with a specified height.
+</div>
+<h2>overflow : clip</h2>
+<div class="ex4">
+The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+The overflow property only works for block elements with a specified height.
+</div>
 
-  <h1>Overflow Property</h1>
-  <p>Overflow property specifies whether to clip the content or to
-  add scrollbars , when an elements content
-  is too big to fit in a specified container
-  </p>
-  <h2>overflow : scroll</h2>
-  <div class="ex1">
-  Overflow property specifies whether to clip the content or to
-  add scrollbars , when an elements content
-  is too big to fit in a specified container
+<h2>Overflow: Visible </h2>
+<div class="ex5">
+The overflow property specifies what should happen if content overflows an element's box.This property specifies whether to clip content or to add scrollbars when an element's content is too big to fit in a specified area.
+The overflow property only works for block elements with a specified height.
   </div>
-  <h2>overflow : hidden</h2>
-  <div class="ex2">
-  Overflow property specifies whether to clip the content or to
-  add scrollbars , when an elements content
-  is too big to fit in a specified container
-  </div>
-  <h2>overflow : auto</h2>
-  <div class="ex3">
-  Overflow property specifies whether to clip the content or to
-  add scrollbars , when an elements content
-  is too big to fit in a specified container
-  </div>
-  <h2>overflow : clip</h2>
-  <div class="ex4">
-  Overflow property specifies whether to clip the content or to
-  add scrollbars , when an elements content
-  is too big to fit in a specified container
-  </div>
-  </body>
-  </html>
 
-  
+</body>
+</html>
