--- a/Task19.html
+++ b/Task19.html
@@ -2,79 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Box Model Properties</title>
+  <meta name="viewport" content="width= , initial-scale=1.0">
+  <title>Box MOdel</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
     }
-    .header, .footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
+    body{
+      background-color: #3500ff;
     }
-    .container {
-      width: 80%;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      border: 2px solid #ddd;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .box {
-      padding: 20px;
-      border: 5px solid #4CAF50;
-      margin: 20px 0;
-      background-color: #e2e2e2;
-      width: 100%;
-      box-sizing: border-box; /* Ensures padding and border are included in the total width and height */
-    }
-    .box1 {
-      width: 300px;
-    }
-    .box2 {
-      width: 400px;
-    }
-    .box3 {
-      width: 500px;
-    }
-    .box-content {
-      background-color: #ffeb3b;
-      padding: 10px;
-      border: 1px solid #fbc02d;
+    .container{
+      background-color: rgb(231, 230,241);
+      border: 3px solid rgb(64, 6, 119);
+      padding:34px 19px;
+      margin: 14px 19px;
+      border-radius:23px;
+      width:533px;
     }
   </style>
 </head>
 <body>
-
-  <div class="header">
-    <h1>Understanding the CSS Box Model</h1>
-  </div>
-
   <div class="container">
-    <div class="box box1">
-      <h2>Box 1</h2>
-      <p class="box-content">This is a box with padding, border, and margin properties applied. The total width includes padding and border due to the box-sizing property.</p>
-    </div>
-
-    <div class="box box2">
-      <h2>Box 2</h2>
-      <p class="box-content">This box is wider and shows the effect of margin spacing between the boxes.</p>
-    </div>
-
-    <div class="box box3">
-      <h2>Box 3</h2>
-      <p class="box-content">The largest box here with visible borders, padding, and margin properties.</p>
-    </div>
+    <h3>This is my heading</h3>
+    <p id="first">
+      In CSS, the term "box model" is used when talking about design and layout.The CSS box model is essentially a box that wraps around every HTML element. It consists of: content, padding, borders and margins. The image
+below illustrates the box model Explanation of the different parts. The content of the box, where text and images appear</p>
   </div>
-
-  <div class="footer">
-    <p>&copy; 2024 Box Model Website. All rights reserved.</p>
+  <div class="container">
+    <h3>This is my heading</h3>
+    <p id="first">
+      In CSS, the term "box model" is used when talking about design and layout.The CSS box model is essentially a box that wraps around every HTML element. It consists of: content, padding, borders and margins. The image
+below illustrates the box model Explanation of the different parts. The content of the box, where text and images appear</p>
   </div>
-
+  <div class="container">
+    <h3>This is my heading</h3>
+    <p id="first">
+      In CSS, the term "box model" is used when talking about design and layout.The CSS box model is essentially a box that wraps around every HTML element. It consists of: content, padding, borders and margins. The image
+below illustrates the box model Explanation of the different parts. The content of the box, where text and images appear</p>
+  </div>
 </body>
 </html>
