--- a/Task17.html
+++ b/Task17.html
@@ -7,10 +7,16 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
+      margin: 0PX;
       padding: 0;
     }
-    .header, .footer {
+    .header{
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+   .footer {
       background-color: #333;
       color: white;
       text-align: center;
@@ -18,29 +24,28 @@
     }
     .container {
       width: 80%;
-      margin: 20px auto; /* Centering container with margin on top and bottom, and auto on left and right */
+      margin: 20px auto;
       padding: 20px;
       background-color: #f4f4f4;
       border: 1px solid #ddd;
     }
     .box {
-      margin: 15px; /* Uniform margin on all sides */
+      margin: 15px; 
       padding: 20px;
       background-color: #e2e2e2;
       border: 1px solid #ccc;
     }
     .box-1 {
-      margin: 30px 10px; /* Top and bottom margins of 30px, left and right margins of 10px */
-    }
+      margin: 30px 10px; 
     .box-2 {
-      margin: 10px 20px 30px; /* Top margin of 10px, right and left margins of 20px, bottom margin of 30px */
+      margin: 10px 20px 30px; 
     }
     .box-3 {
-      margin: 10px; /* Uniform margin on all sides */
+      margin: 10px; 
       background-color: #d2d2d2;
     }
     .box-4 {
-      margin: 20px 0; /* Top and bottom margins of 20px, no left and right margins */
+      margin: 20px 0; 
     }
   </style>
 </head>
@@ -53,22 +58,22 @@
   <div class="container">
     <div class="box box-1">
       <h2>Box 1</h2>
-      <p>This box has a top and bottom margin of 30px, and left and right margins of 10px.</p>
+      <p>The margin property sets the margins for an element, and is a shorthand property for the following properties margin top,right,bottom,left.</p>
     </div>
 
     <div class="box box-2">
       <h2>Box 2</h2>
-      <p>This box has a top margin of 10px, right and left margins of 20px, and a bottom margin of 30px.</p>
+      <p>The margin property sets the margins for an element, and is a shorthand property for the following properties margin top,right,bottom,left.</p>
     </div>
 
     <div class="box box-3">
       <h2>Box 3</h2>
-      <p>This box has a uniform margin of 10px on all sides.</p>
+      <p>The margin property sets the margins for an element, and is a shorthand property for the following properties margin top,right,bottom,left.</p>
     </div>
 
     <div class="box box-4">
       <h2>Box 4</h2>
-      <p>This box has a top and bottom margin of 20px, with no margin on the left and right.</p>
+      <p>The margin property sets the margins for an element, and is a shorthand property for the following properties margin top,right,bottom,left.</p>
     </div>
   </div>
 
