--- a/Task16.html
+++ b/Task16.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Page with Scroll Properties</title>
+  <title>Scroll Properties</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+      scroll-behavior: smooth; 
     .header, .footer {
       background-color: #333;
       color: white;
@@ -18,56 +16,63 @@
     }
     .container {
       width: 80%;
-      margin: 0 auto;
+      margin: 20px auto;
       padding: 20px;
-      background-color: #f9f9f9;
+      background-color: #f4f4f4;
       border: 1px solid #ddd;
-      height: 300px; /* Fixed height to enable vertical scrolling */
-      overflow: auto; /* Enables both horizontal and vertical scrolling */
     }
-    .scroll-x {
-      width: 100%;
-      overflow-x: auto; /* Enables horizontal scrolling */
-      white-space: nowrap; /* Prevents wrapping of inline elements */
-    }
-    .scroll-y {
-      height: 200px; /* Fixed height to enable vertical scrolling */
-      overflow-y: auto; /* Enables vertical scrolling */
+    .section {
+      margin: 50px 0;
+      padding: 20px;
       background-color: #e2e2e2;
+      border: 1px solid #ccc;
     }
-    .content {
-      padding: 20px;
-      background-color: #fff;
-      border: 1px solid #ddd;
-    }
-    .long-content {
-      width: 2000px; /* Creates horizontal overflow */
-    }
-    .tall-content {
-      height: 1000px; /* Creates vertical overflow */
+    .section-1 {
+      scroll-margin-top: 50px; 
+    .section-2 {
+      scroll-margin-bottom: 50px; 
+    .section-3 {
+      scroll-margin: 20px; 
+    .section-4 {
+      scroll-padding: 20px; 
     }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <h1>Web Page with Scroll Properties</h1>
+  <nav>
+    <ul>
+      <li><a href="#section1">Home</a></li>
+      <li><a href="#section2">News</a></li>
+      <li><a href="#section3">Blog</a></li>
+      <li><a href="#section4">About</a></li>
+      <li><a href="#section5">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div id="section1" class="section section-1">
+    <h2>This is Home Section</h2>
+    <p>This section demonstrates the scroll-margin-top property. Scroll to this section and notice the additional space at the top.</p>
   </div>
 
-  <div class="container">
-    <div class="scroll-x">
-      <div class="content long-content">
-        <h2>Horizontal Scrolling</h2>
-        <p>This container demonstrates horizontal scrolling. Scroll horizontally to view the extra content that extends beyond the container's width.</p>
-      </div>
-    </div>
+  <div id="section2" class="section section-2">
+    <h2>This is News Section</h2>
+    <p>This section demonstrates the scroll-margin-bottom property. Scroll to this section and notice the additional space at the bottom.</p>
+  </div>
 
-    <div class="scroll-y">
-      <div class="content tall-content">
-        <h2>Vertical Scrolling</h2>
-        <p>This container demonstrates vertical scrolling. Scroll vertically to view the extra content that extends beyond the container's height.</p>
-      </div>
-    </div>
+  <div id="section3" class="section section-3">
+    <h2>This is Blog Section</h2>
+    <p>This section demonstrates the scroll-margin property. Scroll to this section and notice the additional space all around.</p>
+  </div>
+
+  <div id="section4" class="section section-4">
+    <h2>This is About</h2>
+    <p>This section demonstrates the scroll-padding property. Scroll to this section and notice the additional padding all around.</p>
+  </div>
+
+  <div id="section5" class="section section-5">
+    <h2>This is Contact Section</h2>
+    <p>This section demonstrates the scroll-padding property. Scroll to this section and notice the additional padding all around.</p>
   </div>
 
   <div class="footer">
