--- a/Task9.html
+++ b/Task9.html
@@ -47,12 +47,12 @@
   <div class="main-content">
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 1">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 2">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 3">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 4">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 5">
-      <img src="https://via.placeholder.com/300x200" alt="Placeholder Image 6">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view.jpeg" alt="view">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view1.jpeg" alt="view 1">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view 2.jpeg" alt="view 2">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view 3.jpeg" alt="view 3">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view4.jpeg" alt="view 4">
+      <img src="C:\Users\DELL E5440\Desktop\HTML Task\view5.jpeg" alt="view 5">
     </div>
   </div>
 
