--- a/Task1.html
+++ b/Task1.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>ordered list inside undoredered list</title>
+  <title>Ordered List Inside Undoredered List</title>
   </head>
   <body>
     <ol>
-      <li>java</li>
+      <li>java
       <ul type="square">
         <li>array</li>
         <li>wraper</li>
         <li>OOps</li>
       </ul>
-      <li>Python</li>
-      <li>aws</li>
-      <li>devops</li>
-      <li>django</li>
-      <li>sql</li>
-      <li>react</li>
+    </li>
+      <li>front end</li>
+      <ul type="square">
+        <li>html</li>
+        <li>css</li>
+        <li>javascript</li>
+      </ul>
     </ol>
   </body>
 </html>
