--- a/Task9.html
+++ b/Task9.html
@@ -31,11 +31,8 @@
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease;
     }
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
+    .gallery img:hover 
   </style>
 </head>
 <body>
